--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "io-ts": "^2.0.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "mobx-react-lite": "^1.5.0",
     "parcel": "^1.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
