--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "parcel": "^1.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "typescript": "^3.3.3333"
+    "typescript": "3.7.5"
   }
 }
