--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
-    "@types/node": "^11.11.0",
+    "@types/node": "13.13.4",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "fp-ts": "^2.1.0",
     "io-ts": "^2.0.1",
     "mobx": "^5.9.0",
-    "mobx-react": "^5.4.3",
-    "mobx-react-lite": "^1.5.0",
+    "mobx-react": "6.2.2",
+    "mobx-react-lite": "2.0.6",
     "parcel": "^1.11.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "typescript": "3.7.5"
+    "typescript": "^3.9.1-rc"
   }
 }
