--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "start": "parcel ./src/index.html"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.7",
-    "@emotion/styled": "^10.0.7",
-    "@types/node": "13.13.4",
-    "@types/react": "^16.8.6",
-    "@types/react-dom": "^16.8.2",
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.11.5",
+    "@types/node": "^20.12.10",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "fp-ts": "^2.1.0",
     "io-ts": "^2.0.1",
-    "mobx": "^5.9.0",
-    "mobx-react": "6.2.2",
-    "mobx-react-lite": "2.0.6",
-    "parcel": "^1.11.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "typescript": "^3.9.1-rc"
+    "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
+    "parcel": "^2.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
   }
 }
