--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "es5",
-		"module": "commonjs",
+        "target": "ESNext",
+        "module": "ESNext",
+		"moduleResolution": "node",
 		"strict": true,
         "lib": ["dom", "es6", "esnext"],
         "jsx": "react",
