--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
     "mobx-react-lite": "^4.0.7",
+    "nanoid": "^5.0.7",
     "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
