--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/styled": "^11.11.5",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "express": "^4.19.2",
     "fp-ts": "^2.1.0",
     "io-ts": "^2.0.1",
     "mobx": "^6.12.3",
