--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "ESNext",
         "module": "ESNext",
 		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true,
 		"strict": true,
         "lib": ["dom", "es6", "esnext"],
         "jsx": "react",
