--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "Star-wars",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "ts-check": "./node_modules/.bin/tsc --noEmit -p .",
-    "ts-check:watch": "./node_modules/.bin/tsc --noEmit -p . --watch",
-    "start": "parcel ./src/index.html"
-  },
-  "dependencies": {
-    "@emotion/core": "^11.0.0",
-    "@emotion/styled": "^11.11.5",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.10",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "express": "^4.19.2",
-    "fp-ts": "^2.1.0",
-    "io-ts": "^2.0.1",
-    "mobx": "^6.12.3",
-    "mobx-react": "^9.1.1",
-    "mobx-react-lite": "^4.0.7",
-    "nanoid": "^5.0.7",
-    "parcel": "^2.12.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.4.5",
-    "zod": "^3.23.6"
-  },
-  "devDependencies": {
-    "process": "^0.11.10"
-  }
+    "name": "Star-wars",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "type": "module",
+    "scripts": {
+        "ts-check": "./node_modules/.bin/tsc --noEmit -p .",
+        "ts-check:watch": "./node_modules/.bin/tsc --noEmit -p . --watch",
+        "start": "parcel ./src/index.html"
+    },
+    "dependencies": {
+        "@emotion/core": "^11.0.0",
+        "@emotion/styled": "^11.11.5",
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.12.10",
+        "@types/react": "^18.3.1",
+        "@types/react-dom": "^18.3.0",
+        "express": "^4.19.2",
+        "fp-ts": "^2.1.0",
+        "io-ts": "^2.0.1",
+        "js-sha256": "^0.11.0",
+        "mobx": "^6.12.3",
+        "mobx-react": "^9.1.1",
+        "mobx-react-lite": "^4.0.7",
+        "nanoid": "^5.0.7",
+        "parcel": "^2.12.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "threads": "^1.7.0",
+        "typescript": "^5.4.5",
+        "zod": "^3.23.6"
+    },
+    "devDependencies": {
+        "process": "^0.11.10"
+    }
 }
