--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@emotion/core": "^11.0.0",
         "@emotion/styled": "^11.11.5",
+        "@reactive/utils": "npm:@jsr/reactive__utils@^0.5.4",
         "@types/express": "^4.17.21",
         "@types/node": "^20.12.10",
         "@types/react": "^18.3.1",
